--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "a-star-parallel"
+name = "backend"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
